--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   webview_flutter: ^4.10.0
+  http: ^1.2.2
+  html: ^0.15.5
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
